tests/ui/consts/const-address-of-mut.stderr
error[E0658]: raw mutable pointers are not allowed in constants
  --> $DIR/const-address-of-mut.rs:3:32
   |
LL | const A: () = { let mut x = 2; &raw mut x; };
   |                                ^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: raw mutable pointers are not allowed in statics
  --> $DIR/const-address-of-mut.rs:5:33
   |
LL | static B: () = { let mut x = 2; &raw mut x; };
   |                                 ^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: raw mutable pointers are not allowed in constant functions
  --> $DIR/const-address-of-mut.rs:9:13
   |
LL |     let y = &raw mut x;
   |             ^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
